--- a/MusicaGallery.html
+++ b/MusicaGallery.html
@@ -193,6 +193,37 @@
                         </iframe>
                      </div>
                   </div>
+
+                  <div >
+                     <div  class="margin-r54">
+                        <iframe  width="420" height="345"  src="https://www.youtube.com/embed/ZC7Yeq66Nug"
+                        title="Aprende a tocar acordeon en Escuela De Musica Jireh" frameborder="0" 
+                           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                        </iframe>
+                     </div>
+                  </div>
+
+                  <div >
+                     <div  class="margin-r54">
+                        <iframe  width="420" height="345" src="https://www.youtube.com/embed/TOQsWKIFARM" 
+                        title="Aprender a tocar la acordeon" frameborder="0" 
+                           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                        </iframe>
+                     </div>
+                  </div>
+                 
+                  <div >
+                     <div  class="margin-r54">
+                        <iframe  width="420" height="345"  src="https://www.youtube.com/embed/RVTlqoJSlGA?si=iC_7zNWuO8LQhDvz" 
+                        title="Aprender a tocar la acordeon en Phoenix Arizona" frameborder="0" 
+                           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                        </iframe>
+                     </div>
+                  </div>
+                  
                   <!-- GALLERY -->
                   <div class="gallery-3colgrid-content">
                      <div class="menu-holder menu-3col-grid-image gallery-holder clearfix">
