--- a/MusicaGallery.html
+++ b/MusicaGallery.html
@@ -220,10 +220,29 @@
                      </iframe>
                   </div>
                </div>
+
+                 <!-- TikTok Embed -->
+         <div class="col-auto">
+            <div class="margin-r54">
+               <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@escuelademusicajireh/video/7474709125935500586" 
+                  data-video-id="7474709125935500586" style="max-width: 250px; min-width: 250px;">
+                  <section>
+                     <a target="_blank" title="@escuelademusicajireh" href="https://www.tiktok.com/@escuelademusicajireh?refer=embed">
+                        @escuelademusicajireh
+                     </a> Aprende a tocar acordeon, piano, guitarra y más! 
+                     <a title="escuelademusicajireh" target="_blank" href="https://www.tiktok.com/tag/escuelademusicajireh?refer=embed">#EscuelaDeMusicaJireh</a> 
+                  </section>
+               </blockquote>
+            </div>
+         </div>
+
+
             </div>
          </div>
       </section>
 
+
+      
       <!-- MAIN WRAP CONTENT -->
       <section id="wrap-content" class="page-content">
          <div class="container">
