--- a/MusicaGallery.html
+++ b/MusicaGallery.html
@@ -221,7 +221,7 @@
                   </div>
                </div>
 
-                 <!-- TikTok Embed -->
+                 <!-- TikTok Embed 
                  <div class="col-auto">
                   <div class="margin-r1">
                      <iframe src="https://www.tiktok.com/embed/7474709125935500586" 
@@ -229,7 +229,7 @@
                      </iframe>
                   </div>
                </div>
-               
+               -->
 
 
             </div>
