--- a/index.html
+++ b/index.html
@@ -185,15 +185,17 @@
 					<div class="col-md-6">
 						<h3 class="home-subtitle">Bienvenidos</h3>
 						<h2 class="home-title margin-b24 title-headline" style="font-family: 'Garamond' , serif;">A Escuela De Musica Jireh</h2>
-						<p style="font-family: 'Garamond', serif; font-size:large;">"¡Bienvenidos a la Escuela de Música Jireh en el corazón de Glendale, Arizona, 
-							donde la música toma vida!<br> Nuestra pasión por la educación musical va más allá de lo 
-							convencional. Ofrecemos lecciones de piano y guitarra de alta calidad en tu vecindario. 
-							Descubre la armonía de la música con nosotros y comienza tu viaje musical hoy mismo.
-						<br>
-						Estamos muy orgullosos de poder decir que nuestros estudiantes salen de nuestra escuela con habilidades 
-						increíbles en el instrumento de su elección. Nuestra escuela no solo ayuda a nuestros estudiantes a construir su
-						 conjunto de habilidades, sino también la confianza en su propia capacidad para aprender y crecer. Algo que llevarán
-						  a donde sea que vayan.</p>
+						<p style="font-family: 'Garamond', serif; font-size:large;">🎵 Transforma el Tiempo en Talento en la Escuela de Música Jireh 🎵
+
+							Ubicados en el corazón de Glendale, Arizona, ofrecemos clases de música flexibles y personalizadas para adaptarse a cualquier horario.
+							 Con un historial comprobado de estudiantes que han desarrollado habilidades excepcionales, nuestra escuela no solo enseña piano y guitarra, 
+							 sino que también ayuda a construir confianza y disciplina.
+							 <br>
+							 ¿Por qué perder horas en redes sociales sin aprender nada nuevo? En lugar de hacer scroll infinito,
+							  invierte en una habilidad que te acompañará toda la vida. Nuestras clases son accesibles, efectivas y 
+							  diseñadas para todos los niveles, desde principiantes hasta creadores de contenido que buscan mejorar su producción musical.
+
+							 📅 Agenda tu primera clase hoy y empieza a construir tu legado musical.
 					<!--	<a href="#" class="view-more margin-t36">Find More</a> -->
 					</div>
 					<!-- /row-->
