--- a/English.html
+++ b/English.html
@@ -180,15 +180,16 @@
 			<div class="container">
 				<div class="row margin-b72">
 					<div class="col-md-6">
-						<h3 class="home-subtitle">Welcome</h3>
-						<h2 class="home-title margin-b24 title-headline" style="font-family: 'Garamond', serif;">to escuela De Musica Jireh</h2>
-						<p style="font-family: 'Garamond', serif; font-size: large;">Learn to play in the heart of Glendale, Arizona, where music comes alive!
-							Our passion for music education goes beyond the ordinary. From professional piano lessons to dynamic guitar sessions, we're
-							your harmonious gateway to the world of music in Glendale. Join us and let your musical journey begin
+						<h3 class="home-subtitle">Welcome to </h3>
+						<h2 class="home-title margin-b24 title-headline" style="font-family: 'Garamond', serif;">escuela De Musica Jireh</h2>
+						<p style="font-family: 'Garamond', serif; font-size: large;"><b>🎵 Turn Screen Time into Skill Time at Jireh Music School! 🎵</b>
+
+							Located in the heart of Glendale, Arizona, we offer flexible, customizable music lessons that fit any schedule. Our students 
+							don't just learn piano and guitar—they build confidence, discipline, and real musical talent that lasts a lifetime.
 						<br>
-						We are very proud to be able to say our students leave our school with incredible skills in the instrument of their choice. 
-							  Our school not only helps our students build their skillset,
-							 but also confidence in their own ability to learn and grow. Something they will take wherever they go.
+						Why waste hours endlessly scrolling when you could be mastering an instrument? Instead of consuming content, start creating it. 
+						Our affordable, high-quality lessons help beginners get started and give aspiring content creators the skills to level up their music production.
+						📅 Book your first lesson today and start your child's musical journey!
 						</p>
 						<!--	<a href="#" class="view-more margin-t36">Find More</a> -->
 					</div>
@@ -221,7 +222,8 @@
 							Violin, Cello, Bass, Ukulele, Mandolin<br>
 							Saxophone, Trumpet, Clarinet, Tuba<br>
 							Drums, Congas, Bongos, Kettledrums<br>
-						Singing, Music Theory and more!</p>
+						Singing, Music Theory and more!
+					     <br> <b>Call or Text (602) 434-0670 and book a meet & greet with our Music Director today!</b></p>
 						<a href="./MusicaGallery.html" class="view-more margin-t36">View Gallery</a>
 					</div>
 					<!--	<a href="#" class="view-more margin-t36">Find More</a>-->
@@ -434,7 +436,7 @@
 					<!-- /FOOTER SOCIAL -->
 					<!-- FOOTER COPYRIGHT -->
 				<div class="copyright">
-					Copyright &copy; 2023, finished design by Jireh Multimedia services <br>
+					Copyright &copy; 2025, finished design by Jireh Multimedia services <br>
 					<a href="tel:6024340670"><p>Numero de Director (click here)</p></a>
 				</div>
 				<!-- /FOOTER COPYRIGHT -->
