--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 					<div class="col-md-6">
 						<h3 class="home-subtitle">Bienvenidos</h3>
 						<h2 class="home-title margin-b24 title-headline" style="font-family: 'Garamond' , serif;">A Escuela De Musica Jireh</h2>
-						<p style="font-family: 'Garamond', serif; font-size:large;">🎵 Transforma el Tiempo en Talento en la Escuela de Música Jireh 🎵
+						<p style="font-family: 'Garamond', serif; font-size:large;"><b>🎵 Transforma el Tiempo en Talento en la Escuela de Música Jireh 🎵</b>
 
 							Ubicados en el corazón de Glendale, Arizona, ofrecemos clases de música flexibles y personalizadas para adaptarse a cualquier horario.
 							 Con un historial comprobado de estudiantes que han desarrollado habilidades excepcionales, nuestra escuela no solo enseña piano y guitarra, 
@@ -228,7 +228,8 @@
 							 Piano, Violín, Cello, Bajo, Ukulele, Mandolina,<br>
 							Saxofón, Trompeta, Clarinete, Tuba,<br>
 							Batería, Congas, Bongos, Timbales,<br>
-							Canto, Teoría Musical y ¡Más!<p>
+							Canto, Teoría Musical y ¡Más!
+							<br> <b>Puede llamar o mandar mensaje a (602) 434-0670 para hacer una cita con nuestro Director De Musica sin compromiso!</b><p>
 						<a href="./MusicaGallery.html" class="view-more margin-t36">Ver Fotos</a>
 					</div>
 					<!-- /col-md-6 -->
@@ -439,7 +440,7 @@
 					<!-- /FOOTER SOCIAL -->
 					<!-- FOOTER COPYRIGHT -->
 				<div class="copyright">
-					Copyright &copy; 2023, finished design by Jireh Multimedia services <br>
+					Copyright &copy; 2025, finished design by Jireh Multimedia services <br>
 					<a href="tel:6024340670"><p>Numero de Director (click here)</p></a>
 				</div>
 				<!-- /FOOTER COPYRIGHT -->
