--- a/English.html
+++ b/English.html
@@ -188,7 +188,8 @@
 							don't just learn piano and guitar—they build confidence, discipline, and real musical talent that lasts a lifetime.
 						<br>
 						Why waste hours endlessly scrolling when you could be mastering an instrument? Instead of consuming content, start creating it. 
-						Our affordable, high-quality lessons help beginners get started and give aspiring content creators the skills to level up their music production.
+						Our <b>affordable</b>, high-quality lessons help beginners get started and give aspiring content creators the skills to level up their music production.
+						<br>
 						📅 Book your first lesson today and start your child's musical journey!
 						</p>
 						<!--	<a href="#" class="view-more margin-t36">Find More</a> -->
