--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
 							 sino que también ayuda a construir confianza y disciplina.
 							 <br>
 							 ¿Por qué perder horas en redes sociales sin aprender nada nuevo? En lugar de hacer scroll infinito,
-							  invierte en una habilidad que te acompañará toda la vida. Nuestras clases son accesibles, efectivas y 
+							  invierte en una habilidad que te acompañará toda la vida. Nuestras clases son <b>accesibles,</b> efectivas y 
 							  diseñadas para todos los niveles, desde principiantes hasta creadores de contenido que buscan mejorar su producción musical.
-
+							<br>
 							 📅 Agenda tu primera clase hoy y empieza a construir tu legado musical.
 					<!--	<a href="#" class="view-more margin-t36">Find More</a> -->
 					</div>
