website updates. incl new photos

--- a/English.html
+++ b/English.html
@@ -166,9 +166,9 @@
 		</header>
 		<!-- /HEADER -->
 		<!-- HOME HERO IMAGE -->
-		<section id="home-content-9" class="no-parallax bkg-img-100vh margin-b72" style="background-image:url('images/schoolclose.JPG');">
+		<section id="home-content-9" class="no-parallax bkg-img-100vh margin-b72" style="background-image:url('images/HeroPic.png');">
 			<br><br><div class="container hero-container" style="background-color: rgba(7, 7, 7, 0.694);font-size: 2em; padding: 5px;">
-				<h3 class="white margin-b16" style="font-family: 'Garamond', serif;">Learn To Play<br> Piano, Guitar, Accordion & more!</h3>
+				<h3 class="white margin-b16" style="font-family: 'Montserrat', sans-serif;">Learn To Play<br> Piano, Guitar, Accordion & more!</h3>
 				
 				<p> <a href="contact.html" class="view-more more-white margin-t24">Contact Us</a> <a href="index.html" class="view-more more-white margin-t24">Spanish Site</a></p> 
 				</div>
@@ -181,23 +181,20 @@
 				<div class="row margin-b72">
 					<div class="col-md-6">
 						<h3 class="home-subtitle">Welcome to </h3>
-						<h2 class="home-title margin-b24 title-headline" style="font-family: 'Garamond', serif;">escuela De Musica Jireh</h2>
-						<p style="font-family: 'Garamond', serif; font-size: large;"><b>🎵 Turn Screen Time into Skill Time at Jireh Music School! 🎵</b>
+						<h2 class="home-title margin-b24 title-headline" style="font-family: 'Montserrat', sans-serif;">escuela De Musica Jireh</h2>
+						<p style="font-family: 'Montserrat', sans-serif; font-size: large;"><b>🎵 Turn Screen Time into Skill Time! 🎵</b><br>
 
 							Located in the heart of Glendale, Arizona, we offer flexible, customizable music lessons that fit any schedule. Our students 
 							don't just learn piano and guitar—they build confidence, discipline, and real musical talent that lasts a lifetime.
-						<br>
-						Why waste hours endlessly scrolling when you could be mastering an instrument? Instead of consuming content, start creating it. 
-						Our <b>affordable</b>, high-quality lessons help beginners get started and give aspiring content creators the skills to level up their music production.
-						<br>
-						📅 Book your first lesson today and start your child's musical journey!
+						<br><br>
+						📅 Book your first lesson today and start you or your child's musical journey!
 						</p>
-						<!--	<a href="#" class="view-more margin-t36">Find More</a> -->
+							<a href="./contact.html" class="view-more margin-t36">Contact Us</a> 
 					</div>
 					<!-- /row-->
 					<div class="col-md-6 mobile-margin-b54">
 						<div class="margin-r54">
-							<img class="img-fluid" src="./images/photo1.JPEG" alt="home 9" />
+							<img class="img-fluid" src="./images/PlayingMusic.png" alt="home 9" />
 						</div>
 					</div>
 					<!-- /col-md-6 -->
@@ -212,20 +209,21 @@
 				<div class="row margin-b72">
 					<div class="col-md-6 mobile-margin-b54">
 						<div class="margin-r54">
-							<iframe width="420" height="345" src="https://youtube.com/embed/7hP_3jfmZAo?si=FlYq6PsFMJy0RYRa" frameborder="0" allowfullscreen></iframe>
-						</div>
-					</div>
-					<!-- /col-md-6 -->
-					<div class="col-md-6">
-						<h3 class="home-subtitle">Learn</h3>
-						<h2 class="home-title margin-b24 title-headline" style="font-family: 'Garamond', serif;">to play any instrument</h2>
-						<p style="font-family: 'Garamond', serif; font-size: large;" >Accordion, Guitar, Requinto Sierreno, Piano,<br>
+							<h3 class="home-subtitle">Learn</h3>
+						<h2 class="home-title margin-b24 title-headline" style="font-family: 'Montserrat', sans-serif;">to play any instrument</h2>
+						<p style="font-family: 'Montserrat', sans-serif; font-size: large;" >Accordion, Guitar, Requinto Sierreno, Piano,<br>
 							Violin, Cello, Bass, Ukulele, Mandolin<br>
 							Saxophone, Trumpet, Clarinet, Tuba<br>
 							Drums, Congas, Bongos, Kettledrums<br>
 						Singing, Music Theory and more!
-					     <br> <b>Call or Text (602) 434-0670 and book a meet & greet with our Music Director today!</b></p>
-						<a href="./MusicaGallery.html" class="view-more margin-t36">View Gallery</a>
+					     <br> <br><b>Call or Text (602) 434-0670 
+							<br>To book a meet & greet with our Music Director today!</b></p>
+						<a href="./MusicaGallery.html" class="view-more margin-t36">View Gallery</a></div>
+					</div>
+					<!-- /col-md-6 -->
+					<div class="col-md-6">
+						<iframe width="420" height="345" src="https://youtube.com/embed/7hP_3jfmZAo?si=FlYq6PsFMJy0RYRa" frameborder="0" allowfullscreen></iframe>
+						
 					</div>
 					<!--	<a href="#" class="view-more margin-t36">Find More</a>-->
 					</div>
@@ -241,19 +239,19 @@
 		</section>
 		<!-- /SECTION 1 -->  
 		<!-- SECTION 2 -->        
-		<!-- Add parallax class to a section and a background image to create the parallax effect --> 
+		<!-- Add parallax class to a section and a background image to create the parallax effect
 		<section id="home-content-9-2" class="home-section parallax margin-b72"  style="background-image:url('images/violin.jpg');" >
-			<div class="parallax-content" style="font-family: 'Garamond', serif; font-size: larger;">
+			<div class="parallax-content" style="font-family: 'Montserrat', sans-serif; font-size: larger;">
 				<ul >
 					<li>Flexible Schedules</li>
 					<li>Classes For All Ages</li>
 					<li>We offer grants & flexible payment plans</li>
 					<li>Skilled Teachers</li>
-				</ul>
-				<!--.container-->
-			</div>
-			<!-- /parallax-content -->
-		</section>
+				</ul> --> 
+				<!--.container
+			</div>-->
+			<!-- /parallax-content 
+		</section>-->
 		<!-- /SECTION 2 --> 
 		<!-- SECTION 3 -->     	
 		<section id="home-content-9-3" class="margin-b72">
@@ -367,7 +365,7 @@
 								<label>Message</label>
 								<p><textarea id="cmessage" class="reservation-fields" rows="4"></textarea></p>
 								<p class="antispam">Leave this empty: <input type="text" name="url" /></p>
-								<p class="contact-btn"><input type="submit" value="Send message" id="submit" /></p>
+								<p class="contact-btn"><input type="submit" value="Open Email" id="submit" /></p>
 							</form>
 						</div>
 						<div id="output-contact"></div>
