--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
 		</header>
 		<!-- /HEADER -->
 		<!-- HOME HERO IMAGE -->
-		<section id="home-content-9" class="no-parallax bkg-img-100vh margin-b72" style="background-image:url('images/schoolclose.JPG');">
+		<section id="home-content-9" class="no-parallax bkg-img-100vh margin-b72" style="background-image:url('images/HeroPic.png');">
 			<br><br><div class="container hero-container" style="background-color: rgba(7, 7, 7, 0.694); padding: 5px;">
-				<h3 class="white margin-b16" style="font-family: 'Garamond', serif;">Aprende A Tocar<br> Piano, Guitarra, Accordeon Y Mas!</h3>
+				<h3 class="white margin-b16" style="font-family:'Montserrat', sans-serif;">Aprende A Tocar<br> Piano, Guitarra, Accordeon Y Mas!</h3>
 				<!--<p class="white">
 					¡Descubre las habilidades que puedes aprender con nosotros a continuación!
 				</p> -->
@@ -184,24 +184,19 @@
 				<div class="row margin-b72">
 					<div class="col-md-6">
 						<h3 class="home-subtitle">Bienvenidos</h3>
-						<h2 class="home-title margin-b24 title-headline" style="font-family: 'Garamond' , serif;">A Escuela De Musica Jireh</h2>
-						<p style="font-family: 'Garamond', serif; font-size:large;"><b>🎵 Transforma el Tiempo en Talento en la Escuela de Música Jireh 🎵</b>
+						<h2 class="home-title margin-b24 title-headline" style="font-family:  'Montserrat', sans-serif;">A Escuela De Musica Jireh</h2>
+						<p style="font-family: 'Montserrat', sans-serif; font-size:large;"><b>🎵 Transforma el Tiempo en Talento! 🎵</b><br>
 
 							Ubicados en el corazón de Glendale, Arizona, ofrecemos clases de música flexibles y personalizadas para adaptarse a cualquier horario.
-							 Con un historial comprobado de estudiantes que han desarrollado habilidades excepcionales, nuestra escuela no solo enseña piano y guitarra, 
-							 sino que también ayuda a construir confianza y disciplina.
-							 <br>
-							 ¿Por qué perder horas en redes sociales sin aprender nada nuevo? En lugar de hacer scroll infinito,
-							  invierte en una habilidad que te acompañará toda la vida. Nuestras clases son <b>accesibles,</b> efectivas y 
-							  diseñadas para todos los niveles, desde principiantes hasta creadores de contenido que buscan mejorar su producción musical.
-							<br>
-							 📅 Agenda tu primera clase hoy y empieza a construir tu legado musical.
+							 <br><br>
+							 📅 Agenda tu primera clase hoy y empieza a construir tu legado musical.<br>
+							 <a href="./contact.html" class="view-more margin-t36">Contactar</a>
 					<!--	<a href="#" class="view-more margin-t36">Find More</a> -->
 					</div>
 					<!-- /row-->
 					<div class="col-md-6 mobile-margin-b54">
 						<div class="margin-r54">
-							<img class="img-fluid" src="./images/photo1.JPEG" alt="home 9" />
+							<img class="img-fluid" src="./images/PlayingMusic.png" alt="home 9" />
 						</div>
 					</div>
 					<!-- /col-md-6 -->
@@ -217,21 +212,21 @@
 				<div class="row margin-b72">
 					<div class="col-md-6 mobile-margin-b54">
 						<div class="margin-r54">
-							<iframe width="420" height="345" src="https://youtube.com/embed/XCtfLKorbHM?si=yq-ZROetb8CiAdJf"  frameborder="0" allowfullscreen></iframe>
-						</div>
-					</div>
-					<!-- /col-md-6 -->
-					<div class="col-md-6">
-						<h3 class="home-subtitle">Aprende</h3>
-						<h2 class="home-title margin-b24 title-headline" style="font-family: 'Garamond', serif;">A Tocar </h2>
-						<p style="font-family: 'Garamond', serif; font-size:large">Acordeon, Guitarra, Requinto Sierreno,<br>
+							<h3 class="home-subtitle">Aprende</h3>
+						<h2 class="home-title margin-b24 title-headline" style="font-family: 'Montserrat', sans-serif;">A Tocar </h2>
+						<p style="font-family: 'Montserrat', sans-serif; font-size:large">Acordeon, Guitarra, Requinto Sierreno,<br>
 							 Piano, Violín, Cello, Bajo, Ukulele, Mandolina,<br>
 							Saxofón, Trompeta, Clarinete, Tuba,<br>
 							Batería, Congas, Bongos, Timbales,<br>
 							Canto, Teoría Musical y ¡Más!
-							<br> <b>Puede llamar o mandar mensaje a (602) 434-0670 para hacer una cita con nuestro Director De Musica sin compromiso!</b><p>
+							<br><br> <b>Puede llamar o mandar mensaje a (602) 434-0670 para hacer una cita con nuestro Director De Musica sin compromiso!</b><p>
 						<a href="./MusicaGallery.html" class="view-more margin-t36">Ver Fotos</a>
 					</div>
+					</div>
+					<!-- /col-md-6 -->
+					<div class="col-md-6">
+						<iframe width="420" height="345" src="https://youtube.com/embed/XCtfLKorbHM?si=yq-ZROetb8CiAdJf"  frameborder="0" allowfullscreen></iframe>
+						
 					<!-- /col-md-6 -->
 				</div>
 				<!-- /row-->
@@ -245,18 +240,7 @@
 		<!-- /SECTION 1 -->  
 		<!-- SECTION 2 -->        
 		<!-- Add parallax class to a section and a background image to create the parallax effect --> 
-		<section id="home-content-9-2" class="home-section parallax margin-b72"  style="background-image:url('images/violin.jpg');" >
-			<div class="parallax-content" style="Font-family: 'Garamond', serif; font-size: larger;">
-				<ul>
-					<li>Horarios flexibles</li>
-					<li>Clases para todas las edades</li>
-					<li>Ofrecemos becas y planes de pago flexibles</li>
-					<li>Profesores expertos</li>
-				</ul>
-				<!--.container-->
-			</div>
-			<!-- /parallax-content -->
-		</section>
+	
 		<!-- /SECTION 2 --> 
 		<!-- SECTION 3 -->     	
 		<section id="home-content-9-3" class="margin-b72">
@@ -370,7 +354,7 @@
 								<label>Mensaje</label>
 								<p><textarea id="cmessage" class="reservation-fields" rows="4"></textarea></p>
 								<p class="antispam">Leave this empty: <input type="text" name="url" /></p>
-								<p class="contact-btn"><input type="submit" value="Enviar Mensaje" id="submit" /></p>
+								<p class="contact-btn"><input type="submit" value="Abrir Email" id="submit" /></p>
 							</form>
 						</div>
 						<div id="output-contact"></div>
