--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<a href="index.html">Home</a>
 							<ul class="sub-menu">
 								<li class="menu-item current-menu-item"><a href="index.html">Español</a></li>
-								<li class="menu-item"><a href="English.html">English</a></li>
+								<li class="menu-item"><a href="https://jirehmusicschools.com/">English</a></li>
 							</ul>
 						</li>
 						<li class="menu-item menu-item-has-children">
